# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md  a.ppm
Doc/: DevLog.md  desgin.md  规划.md
SoftwareRenderer/: 1.cpp  helloWindows.cpp  main.cpp
SoftwareRenderer/platform/: Windows.cpp  Windows.h
SoftwareRenderer/rasterizer/: Rasterizer.h  Ray.h
SoftwareRenderer/tools/: Math.cpp  Math.h  Timer.h
